# Provenance

./: .gitignore  README.md  demo_script.md  local-proxy.js  soroban-proxy.js  test_12345.js  test_hash.js  test_hash2.js  test_hash_guess.js  test_hash_old.js  test_old_hash.js  test_stolen_api.js
client/: check_storage.js  test_sim.js  (+6 more)
contracts/provenance/: Cargo.toml  deploy.sh  patch.diff
contracts/provenance/src/: lib.rs  lib.rs.orig  lib.rs.rej  test.rs
contracts/provenance/test_snapshots/test/: test_negative_vk_mixup.1.json  test_provenance_full_flow.1.json
rs-soroban-ultrahonk/: .gitignore  Cargo.toml  README.md  justfile
rs-soroban-ultrahonk/.github/workflows/: ci.yml  e2e.yml  testnet.yml
rs-soroban-ultrahonk/circuits/: README.md
rs-soroban-ultrahonk/circuits/identity/: Nargo.toml  Prover.toml
rs-soroban-ultrahonk/circuits/identity/src/: main.nr
rs-soroban-ultrahonk/circuits/lookup_heavy/: Nargo.toml
rs-soroban-ultrahonk/circuits/lookup_heavy/src/: main.nr
rs-soroban-ultrahonk/circuits/many_pubs/: Nargo.toml  Prover.toml
rs-soroban-ultrahonk/circuits/many_pubs/src/: main.nr
rs-soroban-ultrahonk/circuits/range_heavy/: Nargo.toml
rs-soroban-ultrahonk/circuits/range_heavy/src/: main.nr
rs-soroban-ultrahonk/circuits/scripts/: build_all.sh  build_one.sh
rs-soroban-ultrahonk/circuits/small_circuit/: Nargo.toml
rs-soroban-ultrahonk/circuits/small_circuit/src/: main.nr
rs-soroban-ultrahonk/circuits/tornado/: Prover.toml
rs-soroban-ultrahonk/contracts/identity/: Cargo.toml  README.md
rs-soroban-ultrahonk/scripts/: config.sh  deploy.sh  fund_account.sh  run_identity_e2e.sh  run_localnet_e2e.sh  run_testnet_e2e.sh  setup.sh  start_stellar.sh  stop_stellar.sh  verify.sh
rs-soroban-ultrahonk/scripts/invoke_identity/: invoke_identity.ts  package.json
rs-soroban-ultrahonk/scripts/invoke_ultrahonk/: README.md  invoke_ultrahonk.ts
rs-soroban-ultrahonk/scripts/measure_ultrahonk_costs/: README.md  measure_ultrahonk_costs.ts
(+40 files in other folders)
